clusters/main/kubernetes/system/networkpolicies/app/kube-system-scoped-allow-egress-kube-apiserver.cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-kube-apiserver-scoped
  namespace: kube-system
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/instance
        operator: In
        values:
          - descheduler
          - generic-device-plugin
          - kubelet-csr-approver
          - metrics-server
          - node-feature-discovery
  egress:
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
